results/SVCOMP/2-shot/log-basic1-2024_03_18_23_36_27.txt
class basic1 {
  //@ requires \typeof(System.out) != null;
  //@ ensures \result == null;
  public static void main(String[] args) {
    assert (System.out != null);
    System.out.println("Hello World!");
    assert (System.err != null);
    System.err.println("Hello World!");
    assert (System.in != null);
    try {
      int avail = System.in.available();
    } catch (java.io.IOException e) {
    }
  }
}
/home/max/Documents/JMLGPT/tmp/basic1.java:2: error: No operator for \TYPE != <nulltype>
  //@ requires \typeof(System.out) != null;
                                   ^
/home/max/Documents/JMLGPT/tmp/basic1.java:3: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == null;
               ^
2 errors

